chore: Add validation and documentation to dashToCamel method
Add input validation to prevent null/empty property names and Javadoc.
Add tests to cover conversion.